# clai

./: README.md  clai.py  pyproject.toml
chat/: __init__.py  assistant.py  client.py  language_model.py  role.py  session.py  style.css
chat/assistant/: __init__.py  base.py  postgres.py  programming.py  simple.py  utils.py
src/clai/: __init__.py  client.py  dummy_answers.py  style.css
src/clai/assistant/: pokemon.py  simple.py  utils.py
