[tool.poetry]
name = "clai"
version = "0.1.0"
description = ""
authors = ["Koen Klinkers <k.klinkers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.9"
rich = "^13.3.4"
requests = "^2.31.0"
textual = "^0.52.1"
click = "^8.1.7"
ollama = "^0.1.6"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
