[project]
name = "clai"
version = "0.1.0"
description = "LMM chat client that works for me"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.8",
  "openai>=1.64.0",
  "pygments>=2.19.1",
  "pyperclip>=1.9.0",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "textual>=2.1.2",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
