[project]
name = "clai"
version = "0.1.0"
description = "LMM chat client that works for me"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.8",
  "openai>=1.64.0",
  "pygments>=2.19.1",
  "pyperclip>=1.9.0",
  "requests>=2.32.3",
  "rich>=14.1.0",
  "textual>=6.1.0",
]

[dependency-groups]
dev = ["textual-dev>=1.7.0"]

[project.scripts]
ai = "clai:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
